style: 💄 limit title to 1 line and fix overflowing content

--- a/src/app/components/article/person/article-person.component.scss
+++ b/src/app/components/article/person/article-person.component.scss
@@ -1,3 +1,5 @@
 :host {
-  @apply article;
+  @apply article grid;
+
+  grid-template-columns: min-content minmax(0, 1fr);
 }
